--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ alembic = "^1.9.4"
 pydantic-sqlalchemy = "^0.0.9"
 fastapi-utils = "^0.2.1"
 pytest = "^7.2.1"
+pytz = "^2022.7.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
