--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pydantic-sqlalchemy = "^0.0.9"
 fastapi-utils = "^0.2.1"
 pytest = "^7.2.1"
 pytz = "^2022.7.1"
+workalendar = "^17.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
